test/fail/exceptions/custom_exception.lly
#[
MyException: Correct!
Traceback:
    File "custom_exception.lly", from __main__ at line 11
]#

class MyException(msg: string) < Exception(msg) {

}

raise MyException::new("Correct!\n")
